--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orbis
-spring.datasource.username=s251091
-spring.datasource.password=daq531
+spring.datasource.username=*******
+spring.datasource.password=*******
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=1234alex
+#spring.datasource.username=********
+#spring.datasource.password=*******
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
